--- a/css.css
+++ b/css.css
@@ -64,8 +64,8 @@
   .indicators button {
     margin: 5px;
     border: none;
-    width: 30px;
-    margin-top: -15px;
+    width: 30px !important;
+    margin-top: -15px !important;
     position: relative;
     z-index: 1;
     height: 1px;
@@ -74,7 +74,7 @@
   
   .indicators button.active {
     color: #fff;
-    width: 40px;
+    width: 40px !important;
   }
   
   .p-Home.Flex1 {
@@ -2329,6 +2329,7 @@ overflow: clip;
   height: 145px;
   border-radius: 25px;
   }
+  @media screen and (max-width: 991px) {
       .p-Home.Flex138.bpt {
   -moz-column-gap: 30px;
        column-gap: 30px;
@@ -2435,6 +2436,8 @@ overflow: clip;
   row-gap: 40px;
   align-items: center;
       }
+  }
+  @media screen and (max-width: 767px) {
       .p-Home.Flex113.bpt {
   align-items: center;
       }
@@ -2529,6 +2532,8 @@ overflow: clip;
       .p-Home.TextBox106.bpt {
   width: 70%;
       }
+  }
+  @media screen and (max-width: 478px) {
       .p-Home.Flex1.bpt {
   padding-left: 50px;
   box-sizing: border-box;
@@ -2724,6 +2729,7 @@ overflow: clip;
       .p-Home.TextBox123.bpt {
   width: 60%;
       }
+  }
   .p-about.Flex145 {
   display: flex;
   justify-content: space-around;
@@ -3681,6 +3687,7 @@ overflow: clip;
   width: 30px;
   height: 30px;
   }
+  @media screen and (max-width: 991px) {
       .p-about.Menu2.bpt {
   display: flex;
       }
@@ -3711,9 +3718,12 @@ overflow: clip;
   width: 100%;
   justify-content: space-between;
       }
+  }
+  @media screen and (max-width: 478px) {
       .p-about.Flex145.bpt {
   padding-left: 50px;
       }
+  }
   .p-menu.Flex203 {
   display: flex;
   justify-content: space-around;
@@ -3817,6 +3827,7 @@ overflow: clip;
   }
   .p-menu.Flex342 {
   display: flex;
+  padding-right:o;
   -moz-column-gap: 20px;
        column-gap: 20px;
   }
@@ -3858,6 +3869,7 @@ overflow: clip;
   }
   .p-menu.Flex347 {
   display: flex;
+  row-gap: px;
   -moz-column-gap: 25px;
        column-gap: 25px;
   }
@@ -4110,6 +4122,7 @@ overflow: clip;
   align-items: flex-start;
   flex-direction: column;
   row-gap: 10px;
+  padding-left:px;
   padding-right: 5px;
   }
   .p-menu.Flex254 {
@@ -4713,6 +4726,7 @@ overflow: clip;
   width: 30px;
   height: 30px;
   }
+  @media screen and (max-width: 991px) {
       .p-menu.Menu3.bpt {
   display: flex;
       }
@@ -4754,7 +4768,8 @@ overflow: clip;
   row-gap: 40px;
   align-items: center;
       }
-  
+  }
+  @media screen and (max-width: 767px) {
       .p-menu.Flex229.bpt {
   flex-direction: column;
   row-gap: 10px;
@@ -4769,7 +4784,9 @@ overflow: clip;
       }
       .p-menu.Flex258.bpt {
   width: 50%;
-}
+      }
+  }
+  @media screen and (max-width: 478px) {
       .p-menu.Flex203.bpt {
   padding-left: 50px;
       }
@@ -4804,6 +4821,7 @@ overflow: clip;
       .p-menu.Flex258.bpt {
   width: 70%;
       }
+  }
   .p-product.Flex265 {
   display: flex;
   justify-content: space-around;
@@ -5074,6 +5092,7 @@ overflow: clip;
   align-items: flex-start;
   flex-direction: column;
   row-gap: 10px;
+  padding-left: px;
   padding-right: 5px;
   }
   .p-product.Flex295 {
@@ -5469,6 +5488,7 @@ overflow: clip;
   height: 145px;
   border-radius: 25px;
   }
+  @media screen and (max-width: 991px) {
       .p-product.Menu4.bpt {
   display: flex;
       }
@@ -5504,7 +5524,8 @@ overflow: clip;
   row-gap: 40px;
   align-items: center;
       }
-  
+  }
+  @media screen and (max-width: 767px) {
       .p-product.Flex269.bpt {
   flex-direction: column;
   row-gap: 10px;
@@ -5522,12 +5543,18 @@ overflow: clip;
   flex-direction: column;
   row-gap: 20px;
       }
+  }
+  @media screen and (max-width: 478px) {
       .p-product.Flex265.bpt {
   padding-left: 50px;
       }
       .p-product.Flex266.bpt {
   padding-left: 50px;
   padding-right: 50px;
+      }
+      .p-product.Flex296.bpt {
+  padding-left: px;
+  padding-right: px;
       }
       .p-product.Product_Image.bpt {
   width: 90%;
@@ -5538,7 +5565,7 @@ overflow: clip;
       .p-product.TextBox299.bpt {
   width: 90%;
       }
-
+  }
   .p-extra.Flex349 {
   display: flex;
   height: 100%;
